<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nombre"
            android:inputType="textPersonName"
            android:autofillHints="name" />

        <EditText
            android:id="@+id/etApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_apellido"
            android:inputType="textPersonName"
            android:autofillHints="name" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress" />

        <EditText
            android:id="@+id/etGithub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_github"
            android:inputType="textUri"
            android:autofillHints="username" />

        <EditText
            android:id="@+id/etCursos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_cursos"
            android:inputType="text"
            android:autofillHints="username" />

    </LinearLayout>
</ScrollView>
